--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>To Do List</h1>
-    <form class="js-form-contact" id="form-contact">
+    <form class="js-form-todo" id="form-todo">
     <label for="newTodoItem" class="visually-hidden">Add items to the list</label>
     <input type="text" name="newTodoItem" id="newTodoItem" placeholder="Add item"> 
     <button id="addBtn">Add</button>
