--- a/index.html
+++ b/index.html
@@ -1,20 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To Do List</title>
     <link href="style.css" rel="stylesheet">
 </head>
-<body>
-    <h1>To Do List</h1>
-    <form class="js-form-todo" id="form-todo">
-    <label for="newTodoItem" class="visually-hidden">Add items to the list</label>
-    <input type="text" name="newTodoItem" id="newTodoItem" placeholder="Add item"> 
-    <button id="addBtn">Add</button>
-    </form>
 
-<ul id="todosList"></ul>
-    <script src="index.js"></script> 
+<body>
+    <main>
+        <h1>To Do List</h1>
+        <form class="js-form-todo" id="form-todo">
+            <label for="newTodoItem" class="visually-hidden">Add items to the list</label>
+            <input type="text" name="newTodoItem" id="newTodoItem" placeholder="Add item">
+            <button id="addBtn">Add</button>
+        </form>
+        <ul id="todosList"></ul>
+    </main>
+    <script src="index.js"></script>
 </body>
+
 </html>
