Moved done todos to new list

--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
             <input type="text" name="newTodoItem" id="newTodoItem" placeholder="Add item">
             <button id="addBtn">Add</button>
         </form>
+        <h2>To do</h2>
         <ul id="todosList"></ul>
+        <h2>Done</h2>
+        <ul id="todosListChecked"></ul>
     </main>
     <script src="index.js"></script>
 </body>
